0024792: Remove unused hacks for compilers without STL