src/BinLDrivers/BinLDrivers_DocumentRetrievalDriver.cxx
@@ -490,12 +490,9 @@ void BinLDrivers_DocumentRetrievalDriver::CheckShapeSection(
 				  const Storage_Position& ShapeSectionPos, 
 						    Standard_IStream& IS)
 {
-  if(!IS.eof()) {
-#if defined(WNT) || defined(HAVE_IOSTREAM)
+  if (!IS.eof())
+  {
     const std::streamoff endPos = IS.rdbuf()->pubseekoff(0L, std::ios_base::end, std::ios_base::in);
-#else
-    const Storage_Position endPos = IS.rdbuf()->seekoff(0L, unsafe_ios::end, unsafe_ios::in);
-#endif
 #ifdef DATATYPE_MIGRATION_DEB
     cout << "endPos = " << endPos <<endl;
 #endif
