src/Standard/Standard_Stream.hxx
@@ -12,68 +12,17 @@
 // Alternatively, this file may be used under the terms of Open CASCADE
 // commercial license or contractual agreement.
 
-// Purpose:   Includes standard header files containing definition of streams;
-//            defines macro USE_STL_STREAM if C++ standard STL streams are used
-//            as opposed to obsolete non-standard streams.
-//            Macro USE_OLD_STREAMS may be defined externally to command using 
-//            old streams on WNT; otherwise new streams are used whenever available.
-//            Macro NO_USING_STD may be defined externally to avoid "using"
-//            declaratiions for types from std namespace.
-
 #ifndef _Standard_Stream_HeaderFile
 #define _Standard_Stream_HeaderFile
 
 #include <Standard_Macro.hxx>
 
-#ifdef USE_STL_STREAM
-#undef USE_STL_STREAM
-#endif
-
-// Unix variant
-#ifndef WNT
-
-#ifdef HAVE_IOSTREAM
-  #include <iostream>
-  #define USE_STL_STREAM
-#elif defined (HAVE_IOSTREAM_H)
-  #include <iostream.h>
-#else
-  #error "check config.h file or compilation options: either HAVE_IOSTREAM or HAVE_IOSTREAM_H should be defined"
-#endif
-
-#ifdef HAVE_IOMANIP
-  #include <iomanip>
-#elif defined (HAVE_IOMANIP_H)
-  #include <iomanip.h>
-#endif
-
-#ifdef HAVE_FSTREAM
-  #include <fstream>
-#elif defined (HAVE_FSTREAM_H)
-  #include <fstream.h>
-#endif
-
-// Windows variant
-#else /* WNT */
-
-// Macro USE_OLD_STREAMS may be defined externally to command 
-// using old streams on Windows NT; otherwise new streams are used
-#ifndef USE_OLD_STREAMS
-  #include <iostream>
-  #include <iomanip>
-  #include <fstream>
-  #define USE_STL_STREAM
-#else
-  #include <iostream.h>
-  #include <iomanip.h>
-  #include <fstream.h>
-#endif /* USE_OLD_STREAMS */
-
-#endif /* WNT */
+#include <iostream>
+#include <iomanip>
+#include <fstream>
 
 // "using" declaration for STL types is still necessary
-// as OCCT code contains too much of this staff without std: prefix
-#if defined(USE_STL_STREAM) && ! defined(NO_USING_STD)
+// as OCCT code contains too much of this staff without std:: prefix
 using std::istream;
 using std::ostream;
 using std::ofstream;
@@ -93,6 +42,5 @@ using std::setw;
 using std::setprecision;
 using std::hex;
 using std::dec;
-#endif
 
-#endif /* _Standard_Stream_HeaderFile */
+#endif // _Standard_Stream_HeaderFile
